--- a/index.html
+++ b/index.html
@@ -18,8 +18,109 @@
  	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
  	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
  	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+ 	
+ 	<hr>
+ 	<!--Alignment-->
+ 		<p class="text-left text-lowercase">Left aligned text.</p>
+    	<p class="text-center text-uppercase">Center aligned text.</p>
+    	<p class="text-right text-capitalize">Right aligned text.</p>
+    	<p class="text-justify">Justified text.</p>
+    	<p class="text-nowrap">No wrap text.</p>
+
+    <!--Quick floats-->
+    <div class="pull-right">Div floatan na desno</div>
+    <div class="pull-left">Div floatan na lijevo</div>
+ 	<!--CLear float-->
+ 	<div class="clearfix"></div>
+ 	<hr>
+
+ 	<!--Blockquote-->
+ 	<blockquote class="blockquote">
+ 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+ 		tempor.</p>
+ 		<footer>Quote by <cite title="John Doe">John Doe</cite></footer>
+ 	</blockquote>
+ 	<hr>
+
+ 	<!--liste-->
+ 	<ul class="list-unstyled">
+ 		<li>Itejm Jedan</li>
+ 		<li>Itejm Dva</li>
+ 		<li>Itejm Tri</li>
+ 		<li>Itejm Četiri</li>
+ 	</ul>
+
+ 	<ul class="list-inline">
+ 		<li>Itejm Jedan</li>
+ 		<li>Itejm Dva</li>
+ 		<li>Itejm Tri</li>
+ 		<li>Itejm Četiri</li>
+ 	</ul>
+
+ 	<!--kod-->
+ 	<code>&lt;h1&gt;Heading Text&lt;/h1&gt;</code>
+ 	      <br>
+      Promjeni direktoriji sa <kbd>cd</kbd>
+      <br>
+      Za edit postavki, pritsini <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd>
+
+      <hr>
+      <!--boje-->
+      <p class="text-primary">Hello World</p>
+      <p class="text-success">Hello World</p>
+      <p class="text-info">Hello World</p>
+      <p class="text-warning">Hello World</p>
+      <p class="text-danger">Hello World</p>
+      <p class="text-muted">Hello World</p>
+
+      <p class="bg-primary">Hello World</p>
+      <p class="bg-success">Hello World</p>
+      <p class="bg-info">Hello World</p>
+      <p class="bg-warning">Hello World</p>
+      <p class="bg-danger">Hello World</p>
+      <p class="bg-muted">Hello World</p>
  	</div>
- </body> 
+ 	<hr>
+ 	<div class="container">
+ 		<!--button-->
+ 		<button class="btn-btn-default">
+ 			Dugme
+ 		</button>
+ 		<a href="#" class="btn-btn-default" role="button">Default</a>
+ 		<input type="submit" class="btn-btn-default"
+ 		value="Submit" >
+ 		<br>
+ 		<!--contextual buttons-->
+ 		 <button class="btn btn-default">Default</button>
+      <button class="btn btn-primary">Primarni</button>
+      <button class="btn btn-success">Uspijeh</button>
+      <button class="btn btn-info">Info</button>
+      <button class="btn btn-warning">Upozorenje</button>
+      <button class="btn btn-danger">Izbrisi</button>
+      <button class="btn btn-link">Link</button>
+      <br>
+      <!--veličine buttona-->
+      <button class="btn-btn-default btn-lg">Default</button>
+       <button class="btn-btn-default ">Default</button>
+        <button class="btn-btn-primary btn-sm">Default</button>
+         <button class="btn-btn-default btn-xs" disabled="disabled">Default</button>
+
+ 	</div>
+
+ 	<hr>
+
+ 	<!--forme-->
+ 	<div class="container">
+ 	<form>
+ 		<div class="form-control">
+ 			<label>Ime</label>
+ 			<input type="text" class="form-control" placeholder="Add Name">
+ 		</div>
+ 	</form>
+ </container>
+
+ 	<div style="height: 400px"></div>
+
 
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     
